feat: implement JavaFX GUI for shopping cart application with localization support